[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interfaz.gd" type="Script" id=1]
[ext_resource path="res://fonts/DAEMONES.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 2 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.0
margin_right = 20.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -229.293
margin_top = -180.334
margin_right = 228.707
margin_bottom = 22.6659
custom_fonts/font = SubResource( 2 )
text = "Demon Race"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PLAYButton" type="Button" parent="."]
anchor_left = 0.529
anchor_top = 0.877
anchor_right = 0.529
anchor_bottom = 0.877
margin_left = -121.2
margin_top = -48.2
margin_right = 76.8
margin_bottom = 0.799988
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="PLAYButton" to="." method="_on_PLAYButton_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
